test/domains/vass/domain-from-unbounded-ranges-1.good
domain-from-unbounded-ranges-1.chpl:2: error: one of domain's dimensions is not a bounded range
