test/domains/vass/domain-from-unbounded-ranges-1.chpl

var r = {1..};
var d = {r};
